# millama

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: bot.rs  config.rs  groq.rs  lib.rs  llm.rs  main.rs
