[package]
name = "millama"
version = "0.1.0"
edition = "2024"

[dependencies]
# mtproto
grammers-client = "0.8"
grammers-session = "0.8"
grammers-mtsender = "0.8"
grammers-tl-types = "0.8"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

serde = { version = "1", features = ["derive"] }
json = { package = "serde_json", version = "1" }
config = "0.14"

# CLI and logging
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

anyhow = "1.0"
rpassword = "7.0"